2009-06-29  Steffen Kamper  <info@sk-typo3.de>

	* Followup to #9991: one checkbox in version module was accidental deleted

2009-06-29  Ernesto Baschny <ernst@cron-it.de>

	* Fixed Bug #5381: CSC: Added htmlSpecialChars to rendering page titles in Sitemap/menu content elements (Thanks to Susanne Moog)
	* Added feature #2421: CSC: Move static HTML from render_uploads to TypoScript, providing flexible rendering of "Filelinks" content elements

2009-06-29  Benjamin Mack <benni@typo3.org>

	* Followup to #4361 / New Hook: removed the "&" when calling the hook method (Thanks to Xavier Perseguers)
	* Followup to #9947: Deprecated class t3lib/class.gzip_encode.php as the ob_gzhandler methods are used

2009-06-28  Benjamin Mack <benni@typo3.org>

	* Fixed #10136: tslib_pibase page browser may hurt search engines by the incorrect "Next" link (On behalf of Dmitry Dulepov)
	* Followup to #4361 / New Hook: removed the "&" when calling the hook method (Thanks to Xavier Perseguers)

2009-06-27  Steffen Kamper  <info@sk-typo3.de>

	* Fixed bug #11406: querygenerator/fullsearch doesn't use t3lib_iconWorks::skinImg, added alignment for images
	* Fixed bug #11409: backend.php don't use API to include JS/CSS files

2009-06-27  Benjamin Mack  <benni@typo3.org>

	* Added #4361: Added new hook in class.db_list.inc for the list module (On behalf of Michael Stucki)
	* Fixed bug #6215: MENU before/after* might create invalid HTML output (Thanks to Nabil Saleh)

2009-06-27  Christian Kuhn  <lolli@schwarzbu.ch>

	* Fixed bug #11425: Workspace Shortcut uses hardcoded texts (thanks to Christopher Stelmaszyk)
	* Fixed bug #5061: Message in Web > List isn't localized (thanks to Christopher Stelmaszyk)

2009-06-26  Benjamin Mack  <benni@typo3.org>

	* Fixed Bug #9415 - "Do" Dropdown in Workspace module doesn't respect users rights (Thanks to Franz Koch)

2009-06-26  Christian Kuhn  <lolli@schwarzbu.ch>
